--- a/package.json
+++ b/package.json
@@ -13,19 +13,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@aws-sdk/client-config-service": "^3.363.0",
-    "@aws-sdk/client-s3": "^3.363.0",
-    "@aws-sdk/client-sqs": "^3.282.0",
-    "@aws-sdk/s3-request-presigner": "^3.363.0",
     "@sequelize/core": "^7.0.0-alpha.27",
-    "@vendia/serverless-express": "^4.10.1",
-    "aws-sdk": "^2.1408.0",
-    "axios": "^1.4.0",
-    "express": "^4.18.2",
-    "multer": "^1.4.5-lts.1",
-    "mysql2": "^3.2.0",
-    "serverless-http": "^3.1.1",
-    "source-map-support": "^0.5.21"
+    "mysql2": "^3.2.0"
   },
   "devDependencies": {
     "husky": "^8.0.0",
